[java] "preview"-proof class file version check in Javac2 tool (IDEA-CR-45688)
A class file version in `int` format consists of major (lower 16 bits) and minor parts. Classes compiled with `--enable-preview` flag have the minor part equal to 0xFFFF, making the whole version negative.