@@ -1,7 +1,9 @@
+// Copyright 2000-2019 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.intellij.compiler.instrumentation;
 
 import org.jetbrains.org.objectweb.asm.ClassReader;
 import org.jetbrains.org.objectweb.asm.ClassWriter;
+import org.jetbrains.org.objectweb.asm.Opcodes;
 
 /**
 * @author Eugene Zhuravlev
@@ -45,5 +47,21 @@ public class InstrumenterClassWriter extends ClassWriter {
     catch (Exception e) {
       throw new RuntimeException(e.toString(), e);
     }
+  }
+
+  /**
+   * Returns class file version in the {@code minor << 16 | major} format.<br/>
+   * <b>Warning</b>: in classes compiled with <a href="https://openjdk.java.net/jeps/12">JEP 12's</a> {@code --enable-preview} option
+   * the minor version is {@code 0xFFFF}, making the whole version negative.
+   */
+  public static int getClassFileVersion(ClassReader reader) {
+    return reader.readInt(4);
+  }
+
+  /**
+   * Returns version-specific {@link ClassWriter#ClassWriter(int)} flags.
+   */
+  public static int getAsmClassWriterFlags(int classFileVersion) {
+    return (classFileVersion & 0xFFFF) >= Opcodes.V1_6 ? ClassWriter.COMPUTE_FRAMES : ClassWriter.COMPUTE_MAXS;
   }
 }
